[amd64] cpufreq: Enable X86_P4_CLOCKMOD (Closes: #656328)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18564 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -331,7 +331,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_X86_PCC_CPUFREQ=m
 CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_SPEEDSTEP_CENTRINO=m
-# CONFIG_X86_P4_CLOCKMOD is not set
+CONFIG_X86_P4_CLOCKMOD=m
 
 ##
 ## file: drivers/cpuidle/Kconfig
