Clean up x86 cpufreq config
We have CONFIG_X86_POWERNOW_K8=m and CONFIG_SPEEDSTEP_CENTRINO=m for
both 32-bit and 64-bit configurations, so set these only in the main
config file.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18565 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -330,6 +330,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 ##
 CONFIG_X86_PCC_CPUFREQ=m
 CONFIG_X86_ACPI_CPUFREQ=m
+CONFIG_X86_POWERNOW_K8=m
 CONFIG_X86_SPEEDSTEP_CENTRINO=m
 CONFIG_X86_P4_CLOCKMOD=m
 
