--- a/linux-2.6/debian/templates/image.plain.bug/control
+++ b/linux-2.6/debian/templates/image.plain.bug/control
@@ -1,2 +1,2 @@
 Submit-As: linux-2.6
-Package-Status: firmware-bnx2 firmware-bnx2x firmware-ipw2x00 firmware-ivtv firmware-iwlwifi firmware-linux firmware-linux-nonfree firmware-qlogic firmware-ralink xen-hypervisor
+Package-Status: firmware-atheros firmware-bnx2 firmware-bnx2x firmware-brcm80211 firmware-intelwimax firmware-ipw2x00 firmware-ivtv firmware-iwlwifi firmware-libertas firmware-linux firmware-linux-nonfree firmware-myricom firmware-netxen firmware-qlogic firmware-ralink firmware-realtek xen-hypervisor
