Remove build-dependency on linux-support
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18679 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/rules
+++ b/firmware-free/debian/rules
@@ -37,7 +37,7 @@ else
 endif
 
 debian/control-real: $(GENCONTROL) $(CONTROL_FILES)
-	$(GENCONTROL) $(KERNELVERSION) /usr/src/linux-support-$(KERNELVERSION)
+	$(GENCONTROL) /usr/src/linux-support-$(KERNELVERSION)
 	md5sum $^ > debian/control.md5sum
 	@echo
 	@echo This target is made to fail intentionally, to make sure
