debian/control: Set Multi-Arch: foreign to allow for installation of foreign linux-image packages
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@18681 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/templates/control.binary.in
+++ b/firmware-free/debian/templates/control.binary.in
@@ -6,4 +6,5 @@ Suggests: initramfs-tools, linux-image
 Description: Binary firmware for @desc@
  @longdesc@
 Homepage: @uri@
+Multi-Arch: ${firmware:Multi-Arch}
 
