--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -899,6 +899,8 @@ CONFIG_MD_MULTIPATH=m
 CONFIG_MD_FAULTY=m
 CONFIG_BLK_DEV_DM=m
 # CONFIG_DM_DEBUG is not set
+# CONFIG_DM_DEBUG_BLOCK_STACK_TRACING is not set
+# CONFIG_DM_DEBUG_SPACE_MAPS is not set
 CONFIG_DM_CRYPT=m
 CONFIG_DM_SNAPSHOT=m
 CONFIG_DM_THIN_PROVISIONING=m
@@ -912,6 +914,7 @@ CONFIG_DM_MULTIPATH_ST=m
 CONFIG_DM_DELAY=m
 CONFIG_DM_UEVENT=y
 CONFIG_DM_FLAKEY=m
+CONFIG_DM_VERITY=m
 
 ##
 ## file: drivers/media/Kconfig
