topconfig enable SCSI_UFSHCD driver
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19032 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2731,6 +2731,11 @@ CONFIG_SCSI_QLA_FC=m
 CONFIG_SCSI_QLA_ISCSI=m
 
 ##
+## file: drivers/scsi/ufs/Kconfig
+##
+CONFIG_SCSI_UFSHCD=m
+
+##
 ## file: drivers/spi/Kconfig
 ##
 CONFIG_SPI=y
