--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1779,6 +1779,11 @@ CONFIG_NET_VENDOR_BROCADE=y
 CONFIG_BNA=m
 
 ##
+## file: drivers/net/ethernet/calxeda/Kconfig
+##
+CONFIG_NET_CALXEDA_XGMAC=m
+
+##
 ## file: drivers/net/ethernet/chelsio/Kconfig
 ##
 CONFIG_NET_VENDOR_CHELSIO=y
