--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2089,6 +2089,13 @@ CONFIG_SLIP_SMART=y
 CONFIG_SLIP_MODE_SLIP6=y
 
 ##
+## file: drivers/net/team/Kconfig
+##
+CONFIG_NET_TEAM=m
+CONFIG_NET_TEAM_MODE_ROUNDROBIN=m
+CONFIG_NET_TEAM_MODE_ACTIVEBACKUP=m
+
+##
 ## file: drivers/net/tokenring/Kconfig
 ##
 CONFIG_TR=y
