topconfig enable ATH6KL plus set new variables for wireless drivers
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@19036 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2199,12 +2199,19 @@ CONFIG_ATH5K=m
 # CONFIG_ATH5K_TRACER is not set
 
 ##
+## file: drivers/net/wireless/ath/ath6kl/Kconfig
+##
+CONFIG_ATH6KL=m
+# CONFIG_ATH6KL_DEBUG is not set
+
+##
 ## file: drivers/net/wireless/ath/ath9k/Kconfig
 ##
 CONFIG_ATH9K=m
 CONFIG_ATH9K_PCI=y
 # CONFIG_ATH9K_AHB is not set
 # CONFIG_ATH9K_DEBUGFS is not set
+CONFIG_ATH9K_BTCOEX_SUPPORT=y
 CONFIG_ATH9K_RATE_CONTROL=y
 CONFIG_ATH9K_HTC=m
 # CONFIG_ATH9K_HTC_DEBUGFS is not set
@@ -2228,6 +2235,7 @@ CONFIG_B43_PHY_N=y
 CONFIG_B43_PHY_LP=y
 CONFIG_B43_PHY_HT=y
 # CONFIG_B43_DEBUG is not set
+# CONFIG_B43_BCMA_EXTRA is not set
 
 ##
 ## file: drivers/net/wireless/b43legacy/Kconfig
@@ -2271,7 +2279,7 @@ CONFIG_IPW2200_QOS=y
 ##
 ## file: drivers/net/wireless/iwlegacy/Kconfig
 ##
-# CONFIG_IWLWIFI_LEGACY_DEBUG is not set
+# CONFIG_IWLEGACY_DEBUG is not set is not set
 # CONFIG_IWLWIFI_LEGACY_DEVICE_TRACING is not set
 CONFIG_IWL4965=m
 CONFIG_IWL3945=m
