--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1781,7 +1781,7 @@ CONFIG_BNA=m
 ##
 ## file: drivers/net/ethernet/calxeda/Kconfig
 ##
-CONFIG_NET_CALXEDA_XGMAC=m
+# CONFIG_NET_CALXEDA_XGMAC is not set
 
 ##
 ## file: drivers/net/ethernet/chelsio/Kconfig
