--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1949,6 +1949,8 @@ CONFIG_R8169=m
 ##
 CONFIG_SFC=m
 CONFIG_SFC_MTD=y
+CONFIG_SFC_MCDI_MON=y
+CONFIG_SFC_SRIOV=y
 
 ##
 ## file: drivers/net/ethernet/silan/Kconfig
