--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -1109,6 +1109,7 @@ CONFIG_POWER_SUPPLY=m
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 CONFIG_PDA_POWER=m
 CONFIG_BATTERY_DS2760=m
+CONFIG_BATTERY_SBS=m
 
 ##
 ## file: drivers/rtc/Kconfig
