--- a/linux-tools/debian/templates/control.source.in
+++ b/linux-tools/debian/templates/control.source.in
@@ -2,7 +2,7 @@ Source: linux-tools
 Section: devel
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
-Uploaders: Bastian Blank <waldi@debian.org>, Ben Hutchings <ben@decadent.org.uk>
+Uploaders: Bastian Blank <waldi@debian.org>, Ben Hutchings <ben@decadent.org.uk>, Jonathan Nieder <jrnieder@gmail.com>
 Standards-Version: 3.9.2
 Build-Depends:
  debhelper (>> 7), python,
