To allow auto-removal of linux-image-* packages, do not suggest virtual package linux-image (Closes: #724563)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@20674 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/templates/control.binary.in
+++ b/firmware-free/debian/templates/control.binary.in
@@ -2,7 +2,7 @@ Package: firmware-@package@
 Architecture: all
 Replaces: @?replaces@
 Conflicts: @?conflicts@
-Suggests: initramfs-tools, linux-image
+Suggests: initramfs-tools
 Description: Binary firmware for @desc@
  @longdesc@
 Homepage: @uri@
