debian/control: Allow debhelper to add dependencies through ${misc:Depends}
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@21101 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/firmware-free/debian/templates/control.binary.in
+++ b/firmware-free/debian/templates/control.binary.in
@@ -2,6 +2,7 @@ Package: firmware-@package@
 Architecture: all
 Replaces: @?replaces@
 Conflicts: @?conflicts@
+Depends: ${misc:Depends}
 Suggests: initramfs-tools
 Description: Binary firmware for @desc@
  @longdesc@
